--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo.png">
-    <title>Janal</title>
+    <title>FoodBit</title>
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
 
@@ -18,7 +18,7 @@
             <div class="contenedor">
                 <div class="barra">
                     <a class="logo no-margin centrar-texto" href="index.html">
-                        <h1 class="logo__nombre">Janal<span class="logo__bold">Inc.</span></h1></a>
+                        <h1 class="logo__nombre">Food<span class="logo__bold">Bit.</span></h1></a>
                         
                         <nav class="navegacion">
                             <a href="index.html" class="navegacion__enlace">Inicio</a>
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="header__texto">
-                <h2 class="no-margin">Janal </h2>
+                <h2 class="no-margin">FoodBit</h2>
                 <p class="no-margin blanco"> Plataforma de donacion de Alimentos.</p>
             </div>
         </div>
@@ -100,7 +100,7 @@
         <div class="contenedor">
             <div class="barra">
                 <a class="logo no-margin centrar-texto" href="index.html">
-                    <h1 class="logo__nombre">Janal <span class="logo__bold">Inc.</span></h1></a>
+                    <h1 class="logo__nombre">Food<span class="logo__bold">Bit.</span></h1></a>
                     
                     <nav class="navegacion">
                         <a href="index.html" class="navegacion__enlace">Inicio</a>
