--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
             <h1 class="centrar-texto contacto__titulo">Contacto</h1>
             <form class="formulario" action="">
                 <div class="campo">
-                <label class="campo__label"  for="nombre">Nombre </label>
+                <label class="campo__label"  for="nombre">Nombre</label>
                 <input type="text" class="campo__field" placeholder="" id="nombre">
               </div>
               <div class="campo">
                 <label class="campo__label" for="email">Correo Electrónico</label>
-                <input type="email" class="campo__field" placeholder="" id="Tu e-mail">
+                <input type="email" class="campo__field" placeholder="" id="email">
                 </div>
                 <div class="campo">
                 <label class="campo__label" for="mensaje">Mensaje</label>
-                <textarea name=""  class="campo__field campo__field-textarea"id="mensaje" cols="30" rows="10"></textarea>
+                <textarea name=""  class="campo__field  "id="mensaje" cols="30" rows="10"></textarea>
                 </div>
                 <div class="campo">
                     <input type="submit" placeholder="enviar" class="boton boton--primario">
@@ -95,6 +95,8 @@
         
         </div>
     </section>
+        <div class="spacer-20"></div>
+
 
     <footer class="footer">
         <div class="contenedor">
