--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -45,7 +45,7 @@
                 <input name="" type="password"  class="campo__field2" id="password" >
             </div>
             <div class="">
-                <input type="submit" placeholder="Registrar" class="boton2 boton--primario">
+                <input type="submit" value="Iniciar Sesión" class="boton2 boton--primario">
             </div>
         </form>
     </div>
