--- a/registrar.html
+++ b/registrar.html
@@ -63,7 +63,7 @@
                 <input name="" type="password"  class="campo__field2" id="password" >
             </div>
             <div class="">
-                <input type="submit" placeholder="Registrar" class="boton2 boton--primario">
+                <input type="submit" value="Registrar" class="boton2 boton--primario">
             </div>
         </form>
     </div>
