--- a/solicitar.html
+++ b/solicitar.html
@@ -66,7 +66,7 @@
                     <textarea name=""   class="campo__field2 campo__field-textarea2" id="mensaje" cols="30" rows="10"></textarea>
                 </div>
                 <div class="campo">
-                    <input type="submit" placeholder="Contactar" class="boton boton--primario">
+                    <input type="submit" value="Enviar Solicitud" class="boton boton--primario">
                 </div>
             </form>
         </div>
