--- a/beneficiencia.html
+++ b/beneficiencia.html
@@ -57,7 +57,7 @@
                     <p class="no-margintop">Carr. Libre Monterrey - Reynosa km 103-5 126, Fuentes del Valle, 88746 Reynosa, Tamps.</p>
                     
                     <form action="solicitar.html">
-                    <input type="submit" placeholder="Contactar" class="boton2 boton--primario">
+                    <input type="submit" value="Contactar" class="boton2 boton--primario">
                 </form>
                 </div>
             </div>
