--- a/benefactores.html
+++ b/benefactores.html
@@ -27,7 +27,7 @@
                         <a href="index.html" class="navegacion__enlace">Inicio</a>
                         <a href="benefactores.html" class="navegacion__enlace">Benefactores</a>
                         <a href="registrar.html" class="navegacion__enlace">Registrar</a>
-                        <a href="iniciarsesion.html" class="navegacion__enlace">Iniciar Sesiòn</a>
+                        <a href="iniciarsesion.php" class="navegacion__enlace">Iniciar Sesiòn</a>
 
                     </nav>
                 </div>
