--- a/registrar.html
+++ b/registrar.html
@@ -31,7 +31,7 @@
     <div class="spacer-30"></div>
     <main class=" ">
         <div class="contenedor2">
-        <form class="formulario fondoblanco" method="POST" action="archivo_registrar.php"   >
+        <form class="formulario fondoblanco" method="POST" action="archivo_registrar.php"  enctype="multipart/form-data" >
             <div class="barrita"></div>
             <h2>Registrar</h2>
             <div class="margin-2">
@@ -43,8 +43,8 @@
                 <input class="campo__field2" type="text" id="empresa" name="empresa" required>
             </div>
             <div class="margin-2">
-                <label class="campo__field2 fondoprimario" for="img">Subir logo de la empresa</label>
-                <input type="file" id="img" name="img" accept="image/*" class=" desaparecer">
+                <label class="campo__field2 fondoprimario" for="image">Subir logo de la empresa</label>
+                <input type="file" id="image" name="image" class=" desaparecer">
             </div>
             <div class="margin-2">
                 <label class="campo__label2" for="tel">Telefono</label>
